x/contracts/sdk-macros/tests/ui/fail/first-param.stderr
error: The first paramter of a function with the `#[public]` attribute must be of type `&mut wasmlanche::Context`
 --> tests/ui/fail/first-param.rs:7:16
  |
7 | pub fn test(a: u32) {}
  |                ^^^
